--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Layout</title>
-    <link rel="stylesheet" href="/main.css" />
+    <link rel="stylesheet" href="css/main.css"/>
   </head>
   <body>
     <header>Logo <a href="" onclick="return false">Merch</a></header>
