--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
     <section class="page-on">
       <div class="bg-image">
         <img
-          src="/images/placeholder images/page-one.jpeg"
+          src="images/placeholder images/page-one.jpeg"
           alt="White sports car in a dark garage"
         />
       </div>
@@ -43,7 +43,7 @@
     <section class="page-two">
       <div class="bg-image">
         <img
-          src="/images/placeholder images/page-two.jpeg"
+          src="images/placeholder images/page-two.jpeg"
           loading="lazy"
           alt="Blue sports car in an industrial area"
         />
