--- a/public/index.html
+++ b/public/index.html
@@ -1,57 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Layout</title>
-    <link rel="stylesheet" href="css/global.css" />
-    <link rel="stylesheet" href="css/styling.css" />
-    <link rel="stylesheet" href="css/navigation.css" />
-    <link rel="stylesheet" href="css/page-one.css" />
-  </head>
-  <body>
-    <!-- Landing page with navigation bar -->
-    <section class="page-on">
-      <div class="bg-image">
-        <img
-          src="images/placeholder images/page-one.jpeg"
-          alt="White sports car in a dark garage"
-        />
-      </div>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Layout</title>
+		<link rel="stylesheet" href="css/global.css" />
+		<link rel="stylesheet" href="css/styling.css" />
+		<link rel="stylesheet" href="css/navigation.css" />
+		<link rel="stylesheet" href="css/page-one.css" />
+	</head>
+	<body>
+		<!-- Landing page with navigation bar -->
+		<section class="page-one">
+			<div class="bg-image">
+				<img
+					src="images/placeholder images/page-one.jpeg"
+					alt="White sports car in a dark garage"
+				/>
+			</div>
 
-      <!-- Navigation bar -->
-      <nav>
-        <img src="images//logo/placeholder-logo.png" alt="placeholder logo" />
-        <ul>
-          <li><a href="" onclick="return false">Newsletter</a></li>
-          <li><a href="" onclick="return false">Merch</a></li>
-          <li>
-            <select>
-              <option value="english">EN</option>
-              <option value="swedish">SE</option>
-            </select>
-          </li>
-        </ul>
-      </nav>
+			<!-- Navigation bar -->
+			<nav>
+				<img src="images//logo/placeholder-logo.png" alt="placeholder logo" />
+				<ul>
+					<li><a href="" onclick="return false">Newsletter</a></li>
+					<li><a href="" onclick="return false">Merch</a></li>
+					<li>
+						<select>
+							<option value="english">EN</option>
+							<option value="swedish">SE</option>
+						</select>
+					</li>
+				</ul>
+			</nav>
 
-      <!-- Landing page content -->
-      <h1>Electric</h1>
-      <p>Wow so electric</p>
-    </section>
+			<!-- Landing page content -->
+			<h1>Electric</h1>
+			<p>Wow so electric</p>
+		</section>
 
-    <!-- Second page -->
-    <section class="page-two">
-      <div class="bg-image">
-        <img
-          src="images/placeholder images/page-two.jpeg"
-          loading="lazy"
-          alt="Blue sports car in an industrial area"
-        />
-      </div>
-      <!-- Second page content -->
-      <h1>Experience</h1>
-      <p>Wow much experience</p>
-    </section>
-    <script src="js/scroll.js"></script>
-  </body>
+		<!-- Second page -->
+		<section class="page-two">
+			<div class="bg-image">
+				<img
+					src="images/placeholder images/page-two.jpeg"
+					loading="lazy"
+					alt="Blue sports car in an industrial area"
+				/>
+			</div>
+			<!-- Second page content -->
+			<h1>Experience</h1>
+			<p>Wow much experience</p>
+		</section>
+		<script src="js/scroll.js"></script>
+		<script src="js/intersect.js"></script>
+	</body>
 </html>
