Moved Navigation out of section 1

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,22 @@
 		<link rel="stylesheet" href="css/page-one.css" />
 	</head>
 	<body>
-		<!-- Landing page with navigation bar -->
+		<!-- Navigation -->
+		<nav>
+			<img src="images//logo/placeholder-logo.png" alt="placeholder logo" />
+			<ul>
+				<li><a href="" onclick="return false">Newsletter</a></li>
+				<li><a href="" onclick="return false">Merch</a></li>
+				<li>
+					<select>
+						<option value="english">EN</option>
+						<option value="swedish">SE</option>
+					</select>
+				</li>
+			</ul>
+		</nav>
+
+		<!-- Section 1 -->
 		<section class="page-one">
 			<div class="bg-image">
 				<img
@@ -19,27 +34,12 @@
 				/>
 			</div>
 
-			<!-- Navigation bar -->
-			<nav>
-				<img src="images//logo/placeholder-logo.png" alt="placeholder logo" />
-				<ul>
-					<li><a href="" onclick="return false">Newsletter</a></li>
-					<li><a href="" onclick="return false">Merch</a></li>
-					<li>
-						<select>
-							<option value="english">EN</option>
-							<option value="swedish">SE</option>
-						</select>
-					</li>
-				</ul>
-			</nav>
-
-			<!-- Landing page content -->
+			<!-- Section 1 content -->
 			<h1>Electric</h1>
 			<p>Wow so electric</p>
 		</section>
 
-		<!-- Second page -->
+		<!-- Section 2 -->
 		<section class="page-two">
 			<div class="bg-image">
 				<img
@@ -48,7 +48,7 @@
 					alt="Blue sports car in an industrial area"
 				/>
 			</div>
-			<!-- Second page content -->
+			<!-- Section 2 content -->
 			<h1>Experience</h1>
 			<p>Wow much experience</p>
 		</section>
