added hacky solution to keep scroll to top

--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,8 @@
 		<link rel="stylesheet" href="css/page-one.css" />
 	</head>
 	<body>
+		<!-- This div is to keep scroll on top when first section animates-->
+		<div class="scrollKeeper"></div>
 		<!-- Navigation -->
 		<nav>
 			<img src="images//logo/placeholder-logo.png" alt="placeholder logo" />
