add lazy loading images to sections

--- a/public/index.html
+++ b/public/index.html
@@ -28,9 +28,10 @@
 		</nav>
 
 		<!-- Section 1 -->
-		<section class="page-one">
+		<section class="section-one">
 			<div class="bg-image">
 				<img
+					loading="lazy"
 					src="images/placeholder images/page-one.jpeg"
 					alt="White sports car in a dark garage"
 				/>
@@ -42,11 +43,11 @@
 		</section>
 
 		<!-- Section 2 -->
-		<section class="page-two">
+		<section class="section-two">
 			<div class="bg-image">
 				<img
-					src="images/placeholder images/page-two.jpeg"
 					loading="lazy"
+					src="images/placeholder images/page-two.jpeg"
 					alt="Blue sports car in an industrial area"
 				/>
 			</div>
