Add 3rd section for testing

--- a/public/index.html
+++ b/public/index.html
@@ -55,6 +55,20 @@
 			<h1>Experience</h1>
 			<p>Wow much experience</p>
 		</section>
+
+		<!-- Section 3 -->
+		<section class="section-two">
+			<div class="bg-image">
+				<img
+					loading="lazy"
+					src="images/placeholder images/page-two.jpeg"
+					alt="Blue sports car in an industrial area"
+				/>
+			</div>
+			<!-- Section 2 content -->
+			<h1>Experience</h1>
+			<p>Wow much experience</p>
+		</section>
 		<script src="js/scroll.js"></script>
 		<script src="js/intersect.js"></script>
 	</body>
