--- a/public/index.html
+++ b/public/index.html
@@ -1,75 +1,76 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Layout</title>
-		<link rel="stylesheet" href="css/global.css" />
-		<link rel="stylesheet" href="css/styling.css" />
-		<link rel="stylesheet" href="css/navigation.css" />
-		<link rel="stylesheet" href="css/page-one.css" />
-	</head>
-	<body>
-		<!-- This div is to keep scroll on top when first section animates-->
-		<div class="scrollKeeper"></div>
-		<!-- Navigation -->
-		<nav>
-			<img src="images//logo/placeholder-logo.png" alt="placeholder logo" />
-			<ul>
-				<li><a href="" onclick="return false">Newsletter</a></li>
-				<li><a href="" onclick="return false">Merch</a></li>
-				<li>
-					<select>
-						<option value="english">EN</option>
-						<option value="swedish">SE</option>
-					</select>
-				</li>
-			</ul>
-		</nav>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Layout</title>
+    <link rel="stylesheet" href="css/global.css" />
+    <link rel="stylesheet" href="css/styling.css" />
+    <link rel="stylesheet" href="css/navigation.css" />
+    <link rel="stylesheet" href="css/section-one.css" />
+    <link rel="stylesheet" href="css/section-two.css" />
+  </head>
+  <body>
+    <!-- This div is to keep scroll on top when first section animates-->
+    <div class="scrollKeeper"></div>
+    <!-- Navigation -->
+    <nav>
+      <img src="images//logo/placeholder-logo.png" alt="placeholder logo" />
+      <ul>
+        <li><a href="" onclick="return false">Newsletter</a></li>
+        <li><a href="" onclick="return false">Merch</a></li>
+        <li>
+          <select>
+            <option value="english">EN</option>
+            <option value="swedish">SE</option>
+          </select>
+        </li>
+      </ul>
+    </nav>
 
-		<!-- Section 1 -->
-		<section class="section-one">
-			<div class="bg-image">
-				<img
-					loading="lazy"
-					src="images/placeholder images/page-one.jpeg"
-					alt="White sports car in a dark garage"
-				/>
-			</div>
+    <!-- Section 1 -->
+    <section class="section-one">
+      <div class="bg-image">
+        <img
+          loading="lazy"
+          src="images/placeholder images/page-one.jpeg"
+          alt="White sports car in a dark garage"
+        />
+      </div>
 
-			<!-- Section 1 content -->
-			<h1>Electric</h1>
-			<p>Wow so electric</p>
-		</section>
+      <!-- Section 1 content -->
+      <h1>Electric</h1>
+      <p>Wow so electric</p>
+    </section>
 
-		<!-- Section 2 -->
-		<section class="section-two">
-			<div class="bg-image">
-				<img
-					loading="lazy"
-					src="images/placeholder images/page-two.jpeg"
-					alt="Blue sports car in an industrial area"
-				/>
-			</div>
-			<!-- Section 2 content -->
-			<h1>Experience</h1>
-			<p>Wow much experience</p>
-		</section>
+    <!-- Section 2 -->
+    <section class="section-two">
+      <div class="bg-image">
+        <img
+          loading="lazy"
+          src="images/placeholder images/page-two.jpeg"
+          alt="Blue sports car in an industrial area"
+        />
+      </div>
+      <!-- Section 2 content -->
+      <h1>Experience</h1>
+      <p>Wow much experience</p>
+    </section>
 
-		<!-- Section 3 -->
-		<section class="section-two">
-			<div class="bg-image">
-				<img
-					loading="lazy"
-					src="images/placeholder images/page-two.jpeg"
-					alt="Blue sports car in an industrial area"
-				/>
-			</div>
-			<!-- Section 2 content -->
-			<h1>Experience</h1>
-			<p>Wow much experience</p>
-		</section>
-		<script src="js/scroll.js"></script>
-		<script src="js/intersect.js"></script>
-	</body>
+    <!-- Section 3 -->
+    <section class="section-two">
+      <div class="bg-image">
+        <img
+          loading="lazy"
+          src="images/placeholder images/page-two.jpeg"
+          alt="Blue sports car in an industrial area"
+        />
+      </div>
+      <!-- Section 2 content -->
+      <h1>Experience</h1>
+      <p>Wow much experience</p>
+    </section>
+    <script src="js/scroll.js"></script>
+    <script src="js/intersect.js"></script>
+  </body>
 </html>
