--- a/public/index.html
+++ b/public/index.html
@@ -1,112 +1,117 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Layout</title>
-    <link rel="stylesheet" href="css/global.css" />
-    <link rel="stylesheet" href="css/styling.css" />
-    <link rel="stylesheet" href="css/navigation.css" />
-    <link rel="stylesheet" href="css/newsletter-section.css" />
-    <link rel="stylesheet" href="css/section-1.css" />
-    <link rel="stylesheet" href="css/section-2.css" />
-    <link rel="stylesheet" href="css/section-3.css" />
-  </head>
-  <body>
-    <!-- This div is to keep scroll on top when first section animates-->
-    <div class="scrollKeeper"></div>
-    <!-- Navigation -->
-    <nav>
-      <img src="images/logo/placeholder-logo.png" alt="placeholder logo" />
-      <ul>
-        <li><a href="" onclick="return false">Newsletter</a></li>
-        <li><a href="" onclick="return false">Merch</a></li>
-        <li>
-          <select>
-            <option value="english">EN</option>
-            <option value="swedish">SE</option>
-          </select>
-        </li>
-      </ul>
-    </nav>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Layout</title>
+		<link rel="stylesheet" href="css/global.css" />
+		<link rel="stylesheet" href="css/styling.css" />
+		<link rel="stylesheet" href="css/navigation.css" />
+		<link rel="stylesheet" href="css/newsletter-section.css" />
+		<link rel="stylesheet" href="css/section-1.css" />
+		<link rel="stylesheet" href="css/section-2.css" />
+		<link rel="stylesheet" href="css/section-3.css" />
+		<link rel="stylesheet" href="css/scroll-arrow.css" />
+	</head>
+	<body>
+		<!-- This div is to keep scroll on top when first section animates-->
+		<div class="scrollKeeper"></div>
+		<!-- Navigation -->
+		<nav>
+			<img src="images/logo/placeholder-logo.png" alt="placeholder logo" />
+			<ul>
+				<li><a href="" onclick="return false">Newsletter</a></li>
+				<li><a href="" onclick="return false">Merch</a></li>
+				<li>
+					<select>
+						<option value="english">EN</option>
+						<option value="swedish">SE</option>
+					</select>
+				</li>
+			</ul>
+		</nav>
+		<!-- Scroll arrow -->
+		<div class="scroll-arrow-flex-container">
+			<div class="scroll-arrow"></div>
+		</div>
+		<!-- Section 1 -->
+		<section class="section-1">
+			<div class="bg-image">
+				<picture>
+					<source
+						srcset="images/placeholder-images/desktop/1D.jpeg"
+						media="(min-width: 692px)"
+					/>
+					<img
+						loading="lazy"
+						src="images/placeholder-images/mobile/1M.jpeg"
+						alt="Placeholder image of car"
+					/>
+				</picture>
+			</div>
 
-    <!-- Section 1 -->
-    <section class="section-1">
-      <div class="bg-image">
-        <picture>
-          <source
-            srcset="images/placeholder-images/desktop/1D.jpeg"
-            media="(min-width: 692px)"
-          />
-          <img
-            loading="lazy"
-            src="images/placeholder-images/mobile/1M.jpeg"
-            alt="Placeholder image of car"
-          />
-        </picture>
-      </div>
+			<!-- Section 1 content -->
+			<h1>Electric</h1>
+			<p>Wow so electric</p>
+		</section>
 
-      <!-- Section 1 content -->
-      <h1>Electric</h1>
-      <p>Wow so electric</p>
-    </section>
+		<section class="newsletter-section">
+			<form class="newsletterForm" method="post" action="index.html">
+				<label for="email"
+					>Subscribe to our newsletter for exclusive updates</label
+				>
+				<input
+					type="email"
+					name="email"
+					id="email"
+					placeholder="your@email.com"
+					required
+				/>
+				<button type="submit">Subscribe</button>
+			</form>
+		</section>
 
-    <section class="newsletter-section">
-      <form class="newsletterForm" method="post" action="index.html">
-        <label for="email"
-          >Subscribe to our newsletter for exclusive updates</label
-        >
-        <input
-          type="email"
-          name="email"
-          id="email"
-          placeholder="your@email.com"
-          required
-        />
-        <button type="submit">Subscribe</button>
-      </form>
-    </section>
+		<!-- Section 2 -->
+		<section class="section-2">
+			<div class="bg-image">
+				<picture>
+					<source
+						srcset="images/placeholder-images/desktop/2D.jpeg"
+						media="(min-width: 692px)"
+					/>
+					<img
+						loading="lazy"
+						src="images/placeholder-images/mobile/2M.jpeg"
+						alt="Placeholder image of car"
+					/>
+				</picture>
+			</div>
+			<!-- Section 2 content -->
+			<h1>Experience</h1>
+			<p>Wow much experience</p>
+		</section>
 
-    <!-- Section 2 -->
-    <section class="section-2">
-      <div class="bg-image">
-        <picture>
-          <source
-            srcset="images/placeholder-images/desktop/2D.jpeg"
-            media="(min-width: 692px)"
-          />
-          <img
-            loading="lazy"
-            src="images/placeholder-images/mobile/2M.jpeg"
-            alt="Placeholder image of car"
-          />
-        </picture>
-      </div>
-      <!-- Section 2 content -->
-      <h1>Experience</h1>
-      <p>Wow much experience</p>
-    </section>
-
-    <!-- Section 3 -->
-    <section class="section-3">
-      <div class="bg-image">
-        <picture>
-          <source
-            srcset="images/placeholder-images/desktop/3D.jpeg"
-            media="(min-width: 692px)"
-          />
-          <img
-            loading="lazy"
-            src="images/placeholder-images/mobile/3M.jpeg"
-            alt="Placeholder image of car"
-          />
-        </picture>
-      </div>
-      <!-- Section 3 content -->
-      <h1>Future</h1>
-      <p>Wow such future</p>
-    </section>
-    <script src="js/scroll.js"></script>
-    <script src="js/intersect.js"></script>
-  </body>
+		<!-- Section 3 -->
+		<section class="section-3">
+			<div class="bg-image">
+				<picture>
+					<source
+						srcset="images/placeholder-images/desktop/3D.jpeg"
+						media="(min-width: 692px)"
+					/>
+					<img
+						loading="lazy"
+						src="images/placeholder-images/mobile/3M.jpeg"
+						alt="Placeholder image of car"
+					/>
+				</picture>
+			</div>
+			<!-- Section 3 content -->
+			<h1>Future</h1>
+			<p>Wow such future</p>
+		</section>
+		<script src="js/scroll.js"></script>
+		<script src="js/intersect.js"></script>
+		<!-- <script src="js/scrollArrow.js"></script> -->
+	</body>
 </html>
