Add grid section

--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,7 @@
 		<link rel="stylesheet" href="css/section-2.css" />
 		<link rel="stylesheet" href="css/section-3.css" />
 		<link rel="stylesheet" href="css/scroll-arrow.css" />
+		<link rel="stylesheet" href="css/grid-section.css" />
 	</head>
 	<body>
 		<!-- This div is to keep scroll on top when first section animates-->
@@ -91,6 +92,25 @@
 			<p>Wow much experience</p>
 		</section>
 
+		<!-- Grid section -->
+		<section class="grid-section">
+			<div class="grid">
+				<div class="grid-item1"></div>
+				<div class="grid-item2"></div>
+				<div class="grid-item3">
+					<div class="expand">
+						<button>
+							<p>More</p>
+							<img src="./images/carbon_chevron-down-shadow.svg" alt="" />
+						</button>
+					</div>
+				</div>
+				<div class="grid-item4"></div>
+				<div class="grid-item5"></div>
+				<div class="grid-item6"></div>
+			</div>
+		</section>
+
 		<!-- Section 3 -->
 		<section class="section-3">
 			<div class="bg-image">
@@ -112,6 +132,7 @@
 		</section>
 		<script src="js/scroll.js"></script>
 		<script src="js/intersect.js"></script>
+		<script src="js/gridExpand.js"></script>
 		<!-- <script src="js/scrollArrow.js"></script> -->
 	</body>
 </html>
