--- a/public/index.html
+++ b/public/index.html
@@ -60,8 +60,8 @@
     <section class="section-1">
       <div class="bg-image">
         <picture>
-          <source srcset="images/bg/desktop/Desktop-1.jpg" media="(min-width: 800px)" />
-          <img loading="lazy" src="images/bg/mobile/Mobile-1.jpg" alt="Placeholder image of car" />
+          <source srcset="images/bg/desktop/lalala.png" media="(min-width: 800px)" />
+          <img loading="lazy" src="images/bg/desktop/lalala.png" alt="Placeholder image of car" />
         </picture>
       </div>
 
@@ -78,8 +78,8 @@
     <section class="section-2">
       <div class="bg-image">
         <picture>
-          <source srcset="images/bg/desktop/Desktop-2.jpg" media="(min-width: 800px)" />
-          <img loading="lazy" src="images/bg/mobile/Mobile-2.jpg" alt="Placeholder image of car" />
+          <source srcset="images/bg/desktop/Bil.png" media="(min-width: 800px)" />
+          <img loading="lazy" src="images/bg/desktop/Bil.png" alt="Placeholder image of car" />
         </picture>
       </div>
 
@@ -110,8 +110,8 @@
     <section class="section-3">
       <div class="bg-image">
         <picture>
-          <source srcset="images/bg/desktop/Desktop-3.jpg" media="(min-width: 800px)" />
-          <img loading="lazy" src="images/bg/mobile/Mobile-3.jpg" alt="Placeholder image of car" />
+          <source srcset="images/bg/desktop/Förslag3.jpg" media="(min-width: 800px)" />
+          <img loading="lazy" src="images/bg/desktop/Förslag3.jpg" alt="Placeholder image of car" />
         </picture>
       </div>
       <!-- Section 3 content -->
