--- a/public/index.html
+++ b/public/index.html
@@ -122,7 +122,7 @@
     <!-- Section 4 start -->
     <section class="section-4">
       <div class="bg-image">
-        <img loading="lazy" src="images/bg/color/desktop/Desktop-5-blue.jpg" id="color-bg" alt="product" />
+        <img loading="lazy" src="images/bg/color/desktop/Studio_bil_blå.png" alt="product" />
       </div>
 
       <!-- Section 4 content -->
