Booking Modal Popup changes.
Changed name of newsletterPopup.js to bookingPopup.js as it is actually not a newsletter.

Also updated it so if you click outside of the popup-window it closes, also escape works and the X-button.

--- a/public/index.html
+++ b/public/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Electric</title>
+    <link rel="stylesheet" href="css/booking-popup.css" />
     <link rel="stylesheet" href="css/grid-section.css" />
     <link rel="stylesheet" href="css/header.css" />
     <link rel="stylesheet" href="css/main.css" />
     <link rel="stylesheet" href="css/scroll-arrow.css" />
-    <link rel="stylesheet" href="css/newsletter.css" />
     <link rel="stylesheet" href="css/section-1.css" />
     <link rel="stylesheet" href="css/section-2.css" />
     <link rel="stylesheet" href="css/section-3.css" />
@@ -41,7 +41,7 @@
       <div class="scroll-arrow"></div>
     </div>
 
-    <!-- Booking pop-up window -->
+    <!-- Booking popup window -->
     <div class="popup">
       <div class="popup-content">
         <a href="#" onclick="return false" class="close-btn" id="close"></a>
@@ -146,11 +146,11 @@
       </div>
     </section>
 
+    <script src="js/bookingPopup.js"></script>
     <script src="js/colorPicker.js"></script>
     <script src="js/gridExpand.js"></script>
     <script src="js/intersect.js"></script>
     <script src="js/navbarScroll.js"></script>
-    <script src="js/newsletterPopup.js"></script>
     <!-- <script src="js/scrollArrow.js"></script> -->
   </body>
 </html>
