--- a/public/index.html
+++ b/public/index.html
@@ -24,8 +24,8 @@
       <nav class="nav-bar">
         <img src="images/logo/logo.png" alt="placeholder logo" />
         <ul>
-          <li><a href="#" onclick="return false" id="news-btn">Booking</a></li>
-          <li><a href="#" onclick="return false">Merch</a></li>
+          <li><a href="" id="bookingBtn">Booking</a></li>
+          <li><a href="" id="merchBtn">Merch</a></li>
           <li>
             <select>
               <option value="english">EN</option>
@@ -44,7 +44,7 @@
     <!-- Booking popup window -->
     <div class="popup">
       <div class="popup-content">
-        <a href="#" onclick="return false" class="close-btn" id="close"></a>
+        <a href="" class="close-btn" id="close"></a>
         <form method="post" action="index.html">
           <label for="email">Book test drive</label>
           <input type="text" name="name" id="name" placeholder="Name" required />
