--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,7 @@
   <link rel="stylesheet" href="css/section-4.css" />
   <link rel="stylesheet" href="css/typography.css" />
   <link rel="stylesheet" href="css/newsletter.css" />
+  <link rel="stylesheet" href="css/content-box.css" />
 </head>
 
 <body>
@@ -99,6 +100,10 @@
 
     <!-- Section 2 content -->
     <h1>Experience <br />Wow such experience</h1>
+    <div class="content-box">
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero deleniti amet repellendus laborum architecto
+        magnam saepe aperiam </p>
+    </div>
   </section>
 
   <!-- Grid section -->
