fixed position of newsletter box

--- a/public/index.html
+++ b/public/index.html
@@ -71,15 +71,17 @@
 
     <!-- Section 1 (Landing Page) content -->
     <h1>You are special. <br />Electric.</h1>
-    <div class="newsletter">
-      <div class="upper-half">
-        <p>Subscribe to receive exclusive updates!</p>
-      </div>
-      <div class="lower-half">
-        <div class="email">
-          <input type="email" name="" id="">
+    <div class="content-box-container">
+      <div class="newsletter">
+        <div class="upper-half">
+          <p>Subscribe to receive exclusive updates!</p>
         </div>
-        <div class="submit">Submit</div>
+        <div class="lower-half">
+          <div class="email">
+            <input type="email" name="" id="">
+          </div>
+          <div class="submit">Submit</div>
+        </div>
       </div>
     </div>
     <!-- <form class="newsletter-main" method="post" action="index.html">
@@ -100,10 +102,14 @@
 
     <!-- Section 2 content -->
     <h1>Experience <br />Wow such experience</h1>
-    <div class="content-box">
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero deleniti amet repellendus laborum architecto
-        magnam saepe aperiam </p>
+    <div class="content-box-container">
+      <div class="content-box delayFadeInJSTrigger">
+        <h1>Lorem Ipsum</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero deleniti amet repellendus laborum architecto
+          magnam saepe aperiam </p>
+      </div>
     </div>
+
   </section>
 
   <!-- Grid section -->
