Also grid stuff

--- a/public/index.html
+++ b/public/index.html
@@ -103,7 +103,7 @@
     <!-- Section 2 content -->
     <h1>Experience <br />Wow such experience</h1>
     <div class="content-box-container">
-      <div class="content-box delayFadeInJSTrigger">
+      <div class="content-box">
         <h1>Lorem Ipsum</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero deleniti amet repellendus laborum architecto
           magnam saepe aperiam </p>
@@ -125,9 +125,9 @@
           </button>
         </div>
       </div>
-      <div class="grid-item4"></div>
-      <div class="grid-item5"></div>
-      <div class="grid-item6"></div>
+      <div class="grid-item4 showOnLoad opacity0"></div>
+      <div class="grid-item5 showOnLoad opacity0"></div>
+      <div class="grid-item6 showOnLoad opacity0"></div>
     </div>
   </section>
 
@@ -142,6 +142,25 @@
     <!-- Section 3 content -->
     <h1>Future <br />Wow much future</h1>
     <h2>Over here too wow</h2>
+  </section>
+
+  <!-- Grid section 2 -->
+  <section class="grid-section2">
+    <div class="grid">
+      <div class="grid-item7"></div>
+      <div class="grid-item8"></div>
+      <div class="grid-item9">
+        <div class="expand">
+          <button>
+            <p>More</p>
+            <img src="./images/carbon_chevron-down-shadow.svg" alt="" />
+          </button>
+        </div>
+      </div>
+      <div class="grid-item10 showOnLoad2 opacity0"></div>
+      <div class="grid-item11 showOnLoad2 opacity0"></div>
+      <div class="grid-item12 showOnLoad2 opacity0"></div>
+    </div>
   </section>
 
   <!-- Section 4 start -->
@@ -174,6 +193,7 @@
   <script src="js/bookingPopup.js"></script>
   <script src="js/colorPicker.js"></script>
   <script src="js/gridExpand.js"></script>
+  <script src="js/gridExpand2.js"></script>
   <script src="js/intersect.js"></script>
   <script src="js/navbarScroll.js"></script>
   <!-- <script src="js/scrollArrow.js"></script> -->
