Updated styling for overlays

--- a/public/index.html
+++ b/public/index.html
@@ -50,7 +50,7 @@
     <div class="popup-content">
       <a href="" class="close-btn" id="close"></a>
       <form method="post" action="index.html">
-        <label for="email">Book test drive</label>
+        <h2><label for="email">Book test drive</label></h2>
         <input type="text" name="name" id="name" placeholder="Name" required />
         <input type="date" name="date" id="date" placeholder="Last name" required />
         <input type="time" name="time" id="time" placeholder="Last name" required />
