Added final images
Added the final images to the project. Will have to optimize them later, though.

--- a/public/index.html
+++ b/public/index.html
@@ -64,8 +64,8 @@
     <section class="section-1">
       <div class="bg-image">
         <picture>
-          <source srcset="images/bg/desktop/lalala.png" media="(min-width: 800px)" />
-          <img loading="lazy" src="images/bg/desktop/lalala.png" alt="Placeholder image of car" />
+          <source srcset="images/bg/desktop/Hero.png" media="(min-width: 800px)" />
+          <img loading="lazy" src="images/bg/desktop/Hero.png" alt="Hero image of car standing in front of a mountain wall" />
         </picture>
       </div>
 
@@ -95,8 +95,8 @@
     <section class="section-2">
       <div class="bg-image">
         <picture>
-          <source srcset="images/bg/desktop/Bil.png" media="(min-width: 800px)" />
-          <img loading="lazy" src="images/bg/desktop/Bil.png" alt="Placeholder image of car" />
+          <source srcset="images/bg/desktop/Human.png" media="(min-width: 800px)" />
+          <img loading="lazy" src="images/bg/desktop//Human.png" alt="Woman next to the car taking a picture of the landscape" />
         </picture>
       </div>
 
@@ -119,7 +119,7 @@
           <div class="expand">
             <button>
               <p>More</p>
-              <img src="./images/carbon_chevron-down-shadow.svg" alt="" />
+              <img src="images/carbon_chevron-down-shadow.svg" alt="" />
             </button>
           </div>
         </div>
@@ -133,8 +133,8 @@
     <section class="section-3">
       <div class="bg-image">
         <picture>
-          <source srcset="images/bg/desktop/Förslag3.jpg" media="(min-width: 800px)" />
-          <img loading="lazy" src="images/bg/desktop/Förslag3.jpg" alt="Placeholder image of car" />
+          <source srcset="images/bg/desktop/Keyfob-merch.png" media="(min-width: 800px)" />
+          <img loading="lazy" src="images/bg/desktop/Keyfob-merch.png" alt="Merchandise keyfob" />
         </picture>
       </div>
       <!-- Section 3 content -->
@@ -164,7 +164,7 @@
     <!-- Section 4 start -->
     <section class="section-4">
       <div class="bg-image">
-        <img loading="lazy" src="images/bg/color/desktop/Studio_bil_blå.png" alt="product" />
+        <img loading="lazy" src="images/bg/color/Studio-blue.png" alt="product" />
       </div>
 
       <!-- Section 4 content -->
@@ -177,12 +177,12 @@
           <input type="radio" name="color" value="red" />
           <div class="button"><span></span></div>
         </label>
-        <label class="yellow">
-          <input type="radio" name="color" value="yellow" />
+        <label class="green">
+          <input type="radio" name="color" value="green" />
           <div class="button"><span></span></div>
         </label>
-        <label class="white">
-          <input type="radio" name="color" value="white" />
+        <label class="gray">
+          <input type="radio" name="color" value="gray" />
           <div class="button"><span></span></div>
         </label>
       </div>
