--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<!-- Test comment can be removed -->
+<!-- Test comment new can be removed -->
 
 <head>
   <meta charset="UTF-8" />
