--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <header>
       <!-- Navigation bar -->
       <nav class="nav-bar">
-        <img src="/public/images/logo/logo.png" alt="placeholder logo" />
+        <img src="/public/images/logo/logo2.png" alt="placeholder logo" />
         <ul>
           <li><a href="" id="bookingBtn">Booking</a></li>
           <li><a href="#merch" id="merchBtn">Merch</a></li>
@@ -133,10 +133,10 @@
         </div>
         <div class="grid-item5 showOnLoad opacity0"></div>
         <div class="grid-item6 showOnLoad opacity0">
-          <div class="text-box">
+          <!-- <div class="text-box">
             <h2>Hello</h2>
             <p>This is a sample text</p>
-          </div>
+          </div> -->
         </div>
       </div>
     </section>
